fixed bootstrap of sign-in and sign-out, fixed footer on about page, bootstrap fix of index page, and alignment and controller project spec

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -6,14 +6,13 @@ body {
     padding-top: 60px;
 }
 
-.navbar-nav {
-    padding-top: 15px;
-}
-
 .panel-body {
   min-height: 100px;
 }
 
+/*.navbar-nav {
+padding-top: 15px;
+}*/
 
 /*.navbar-brand {
   color: black;
